# PIMSys

./: README.md
pim-isa/: Cargo.toml
pim-isa/src/: lib.rs
pim-os/: Cargo.toml  aarch64-gem5.ld  build.rs
pim-os/src/: alloc.rs  critical_section.rs  kernel.rs  lib.rs  m5op.rs  m5op.s  memory_config.rs  panic.rs  pim.rs  start.s  uart.rs
pim-os/src/kernel/: gemv.rs  haxpy.rs  legacy.rs  vadd.rs  vmul.rs
pim-os/src/kernel/legacy/: matrix_matrix_add.rs  matrix_matrix_mul.rs  matrix_scalar_mul.rs  matrix_vector_mul.rs
pim-os/src/pim/: config.rs  continuous_array.rs  interleaved_array.rs  operation.rs  state.rs  vector.rs
pim-os/src/pim/legacy/: array.rs
pim-vm/: Cargo.toml
pim-vm/src/: lib.rs
