cargo-features = ["per-package-target"]

[package]
name = "pim-os"
version = "0.1.0"
edition = "2021"
forced-target = "aarch64-unknown-none"

[features]
cacheless = []
X1 = []
X2 = []
X3 = []
X4 = []

[dependencies]
aarch64-cpu = "9.4.0"
half = { version = "2.3.1", default-features = false }
nalgebra = { version = "0.32.3", default-features = false }
pim-isa = { path = "../pim-isa", default-features = false }
serde-json-core = "0.5.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
num-traits = { version = "0.2.17", default-features = false }
embedded-alloc = "0.5.1"
critical-section = "1.1.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
